Fixed project names from overlapping on mobile screens.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -175,6 +175,10 @@ footer {
     font-size: 6vw;
   }
 
+  .project-name {
+    color: black;
+  }
+
   .desc {
     font-size: 4vw;
     line-height: 1.2em;
